Spring Thymeleaf commit2

--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
@@ -10,5 +10,13 @@
 <h2 th:text="${students.get(0).firstName}"></h2>
 <h2 th:text="${students.get(0).lastName}"></h2>
 
+<!--Concatenation-->
+<h2 th:text="${'Welcome ' + students.get(0).firstName}"></h2>
+
+<!--Link-->
+<a th:href="@{https://cydeo.com}">Cydeo Home Page</a><br>
+
+<a th:href="@{/student/welcome}">Link1</a>
+
 </body>
 </html>
