--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.min.css}">
+
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
+
 </head>
 <body>
 
-<h2>Welcome to Cydeo</h2>
+<h2 class="display-1 text-danger">Welcome to Cydeo</h2>
+
+<h2 class="cydeo">My custom CSS</h2>
+
+<img th:src="@{/images/welcome-38249.png}"/>
 
 </body>
 </html>
