--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.min.css}">
+    <link th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.min.css}" rel="stylesheet" media="screen">
 
     <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 
