Spring Thymeleaf commit6

--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/welcome.html
@@ -19,5 +19,8 @@
 
 <img th:src="@{/images/welcome-38249.png}"/>
 
+<div th:replace="/fragments/index :: footer-menu">Menu</div>
+<div th:replace="/fragments/index :: main-menu">Menu</div>
+
 </body>
 </html>
