Spring Thymeleaf commit7

--- a/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/Spring-09-Spring-Thymeleaf/src/main/resources/templates/student/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="#{index.page.title}">Title</title>
 </head>
 <body>
 
@@ -29,6 +29,16 @@
 <ul>
     <li th:each="student : ${students}" th:text="${student.firstName}"></li>
 </ul>
+
+<!--Conditional Logic-->
+<div th:text="${students.get(0).age > 25 ? 'ELEGIBLE' : 'NOT ELEGIBLE'}"></div>
+
+<div>
+    <span th:if="${students.get(0).getState() == 'Arizona'}">Arizona</span>
+    <span th:unless="${students.get(0).getState() == 'Arizona'}">Not Arizona</span>
+</div>
+
+
 
 </body>
 </html>
